--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "test": "mocha server/**/*.test.js",
     "test-watch": "nodemon --exec 'npm test'"
   },
-
   "engines": {
     "node": "8.1.3"
   },
@@ -17,6 +16,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.15.3",
+    "lodash": "^4.17.4",
     "mongodb": "^2.2.30",
     "mongoose": "^4.5.9"
   },
