--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.15.2",
     "crypto-js": "^3.1.9-1",
     "express": "^4.15.3",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^7.4.3",
     "lodash": "^4.17.4",
     "mongodb": "^2.2.30",
